--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ dependencies {
     implementation("jakarta.xml.ws:jakarta.xml.ws-api:2.3.3")
     implementation("com.sun.xml.ws:jaxws-ri:2.3.3")
 
-    implementation("org.kubinity:trinity-core-soap-client:0.1.0")
+    implementation("org.kubinity:soap-client:0.1.0")
 
     runtimeOnly("ch.qos.logback:logback-classic")
     runtimeOnly("com.fasterxml.jackson.module:jackson-module-kotlin")
